--- a/templates/cfp/form_installation_include.html
+++ b/templates/cfp/form_installation_include.html
@@ -1,6 +1,14 @@
 <h3>What we're looking for</h3>
 <p>We're looking for installations for our attendees to admire and interact with all over the site. Think big.</p>
 <p>In previous years we've had towers of flame, robots to drag around, trees that react to breathing, visualisations of black holes, fields of light that swarm around you, and domes as far as the eye can see.</p>
+<p>Please fill in this form if any of the following are true of your (proposed) installation:</p>
+<ul>
+  <li>Safety concerns &mdash; if it involves fire, high power lasers, whirling blades etc.</li>
+  <li>Specific siting &mdash; does it need a lot of space, is it very noisy, want it somewhere not in your tent or village or do you want to place it in Null Sector?</li>
+  <li>Power &mdash; any power requirements beyond a normal 13A plug/Ceeform</li>
+  <li>Funding &mdash; we can provide some grants for projects.</li>
+  <li>Transport &mdash; if you need help moving your installation we may be able to help.</li>
+  <li>You're unsure if you should to talk to us</li>
+</ul>
 
-<p>This year we're setting a theme for installations &ndash; while anything goes, we're specifically looking for installations that play with the themes of Artificial Intelligence, Privacy, and Robotics. Think twenty years in the future and bring it to life in a fun way.</p>
-
+<p>If, from the above, you don't think you need to talk to us we'd still love to know about your installation: please let us know on the <a role="menuitem" rel="noopener" target="_blank" href="https://wiki.emfcamp.org">Wiki</a></p>
