updated wording during call w/ Jonty & sam

--- a/templates/cfp/form_installation_include.html
+++ b/templates/cfp/form_installation_include.html
@@ -1,10 +1,11 @@
 <h3>What we're looking for</h3>
 <p>We're looking for installations for our attendees to admire and interact with all over the site. Think big.</p>
 <p>In previous years we've had towers of flame, robots to drag around, trees that react to breathing, visualisations of black holes, fields of light that swarm around you, and domes as far as the eye can see.</p>
-<p>Please fill in this form if any of the following are true of your (proposed) installation:</p>
+<p>You only submit an installation to the CfP if any of the following are true. Otherwise, please feel free to just bring it! We don't need to know about all installations in advance.</p>
 <ul>
   <li>Safety concerns &mdash; if it involves fire, high power lasers, whirling blades etc.</li>
-  <li>Specific siting &mdash; does it need a lot of space, is it very noisy, want it somewhere not in your tent or village or do you want to place it in Null Sector?</li>
+  <li>Location &mdash; does it need a lot of space, is it very noisy, want it somewhere not in your tent or village?</li>
+  <li>Null Sector&mdash; you would like to submit it for inclusion in Null Sector?</li>
   <li>Power &mdash; any power requirements beyond a normal 13A plug/Ceeform</li>
   <li>Funding &mdash; we can provide some grants for projects.</li>
   <li>Transport &mdash; if you need help moving your installation we may be able to help.</li>
